--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
 }
 
 
+
 body{
     
     font-family: Arial, Helvetica, sans-serif;
@@ -75,6 +76,11 @@ div#email{
 .Blue-sky-background-and-white-clouds-soft-focus,-and-copy-space-5-hex { color: #FA8773; }
 */
 
+
+img#calendarimg{
+    height: 500px;
+    width: 500px;
+}
 
     #assist{
         color: #191970;
