--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     font-weight: normal;
     font-style: normal;
-    background-image: linear-gradient(to bottom,#000000, #162f3f, white);
+    background-image: linear-gradient(to bottom,#000000, #0b517c, white);
     border-radius: 10px;
     width: 900px;
     height: 1050px;
